--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -259,12 +259,12 @@
 
               <div class="form-grid">
                 <div class="form-group">
-                  <label for="hourlyRate">Rate (hours) *</label>
+                  <label for="hourlyDuration">Duration (hours) *</label>
                   <input
                     type="number"
-                    id="hourlyRate"
-                    [(ngModel)]="newService.hourlyRate"
-                    name="hourlyRate"
+                    id="hourlyDuration"
+                    [(ngModel)]="newService.hourlyDuration"
+                    name="hourlyDuration"
                     min="1"
                     class="form-control"
                     required
@@ -324,7 +324,7 @@
               <p class="service-description">{{ service.description }}</p>
               <div class="service-meta">
                 <span class="category">{{ service.category }}</span>
-                <span class="duration">{{ service.hourlyRate }} hours</span>
+                <span class="duration">{{ service.hourlyDuration }} hours</span>
               </div>
               <div class="service-tags" *ngIf="service.tags.length > 0">
                 <span class="tag" *ngFor="let tag of service.tags">{{ tag }}</span>
