--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -11,6 +11,7 @@
       <a routerLink="/services" class="nav-link" routerLinkActive="active">Services</a>
       <a routerLink="/about" class="nav-link" routerLinkActive="active">About</a>
       <a routerLink="/donate" class="nav-link" routerLinkActive="active">Donate</a>
+      <a routerLink="/contribute" class="nav-link" routerLinkActive="active">Contribute</a>
       
       <!-- Authenticated user links -->
       <ng-container *ngIf="isAuthenticated">
